--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=https://webridge-backend-development.up.railway.app/api/v1/
+VITE_GOOGLE_CLIENT_ID=425962390625-vjg63slgeg84b6r9ci6g4nls25j9e8dv.apps.googleusercontent.com
